tdf#91125 - nail a clutch of calc modeless dialog lifecycle issues.

Good idea to hold a reference after creation.

Change-Id: I450c415259c4011c8b3fb8be715e55643765d9db