sc/source/ui/inc/tabvwsh.hxx
@@ -356,9 +356,9 @@ public:
     void            DeactivateOle();
 
     SC_DLLPUBLIC static ScTabViewShell* GetActiveViewShell();
-    SfxModelessDialog*  CreateRefDialog( SfxBindings* pB, SfxChildWindow* pCW,
-                                        SfxChildWinInfo* pInfo,
-                                        vcl::Window* pParent, sal_uInt16 nSlotId );
+    VclPtr<SfxModelessDialog> CreateRefDialog( SfxBindings* pB, SfxChildWindow* pCW,
+                                               SfxChildWinInfo* pInfo,
+                                               vcl::Window* pParent, sal_uInt16 nSlotId );
 
     void            UpdateOleZoom();
     inline SbxObject* GetScSbxObject() const
